fix: change score id to prevent overlap

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ body {
     padding: 10px;
 }
 
-#score {
+#finalscore {
     color: #eee;
     text-align: center;
 }
